refactor: stop this cursor-pointer madness

--- a/apps/client/src/app.css
+++ b/apps/client/src/app.css
@@ -2,6 +2,14 @@
 @plugin '@tailwindcss/forms';
 @plugin '@tailwindcss/typography';
 
+button {
+	@apply cursor-pointer;
+
+	&:disabled {
+		@apply cursor-not-allowed;
+	}
+}
+
 /* Custom Text Color Classes */
 .text-primary {
 	@apply bg-gradient-to-r from-slate-400 to-slate-200 bg-clip-text text-transparent;
